# bot

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  redis.conf
db/: __init__.py  mongo.py
db/models/: user.py
logic/: __init__.py
logic/main/: __init__.py  nahui.py  start.py
logic/router_example/: __init__.py  example.py
tests/: generate_test_users.py  r.py
utils/middlewares/: auth.py
web_admin/: admin.py  logs.py  users.py
